--- a/index.html
+++ b/index.html
@@ -8,19 +8,11 @@
   </head>
   <body>
 
-  <div class="container">
-    <div class="row" id="row-1">
-
-    </div>
-    <div class="row" id="row-2">
-
-    </div>
-    <div class="row" id="row-3">
-
-    </div>
-    <div class="row" id="row-4">
-
-    </div>
+  <div class="container" id="game-board">
+    <div class="row" id="row1"></div>
+    <div class="row" id="row2"></div>
+    <div class="row" id="row3"></div>
+    <div class="row" id="row4"></div>
   </div>
 
   <button type="button" id="start-game-button">Start Game</button>
@@ -28,6 +20,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="src/phrase.js"></script>
   <script src="src/app.js"></script>
   <script src="src/index.js"></script>
   </body>
