wheel works and consonant selector added

--- a/index.html
+++ b/index.html
@@ -15,11 +15,32 @@
     <div class="row" id="row4"></div>
   </div>
 
-  <button type="button" id="start-game-button">Start Game</button>
+  <div class="container col-lg" >
+    <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h4 class="display-8" id="letter-container">Chosen Letters:</h4>
+      <h4 class="display-8" id="letter-container"></h4>
+    </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="container col-lg-6" id="wheel-container">
+
+    </div>
+    <div class="container col-lg-6" id="button-container">
+      <div class="row" id="key-row1"></div>
+      <div class="row" id="key-row2"></div>
+      <div class="row" id="key-row3"></div>
+    </div>
+  </div>
+
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="src/wheel.js"></script>
   <script src="src/phrase.js"></script>
   <script src="src/app.js"></script>
   <script src="src/index.js"></script>
