--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       </div>
 
-      <div class="container col-lg-6" id="button-container" disabled>
+      <div class="container col-lg-6 disabled-div" id="button-container">
         <div class="row" id="key-row1"></div>
         <div class="row" id="key-row2"></div>
         <div class="row" id="key-row3"></div>
