--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
     <ul class="nav justify-content-center bg-warning">
       <li class="nav-item">
-        <p class="nav-link">Current User:</p>
+        <p class="nav-link">Current User: <span id="current-user"></span></p>
       </li>
       <li class="nav-item">
-        <p class="nav-link"><strong>Winnings:</strong></a>
+        <p class="nav-link"><strong>Winnings: <span id="winnings"></span></strong></a>
       </li>
       <li class="nav-item">
-        <p class="nav-link lead"><strong>BOX OF FORTUNE</strong></p>
+        <p class="nav-link lead"> <h4><strong>BOX OF FORTUNE</strong></h4> </p>
       </li>
       <li class="nav-item">
-        <p class="nav-link"><strong>Spins Left:</strong></p>
+        <p class="nav-link"><strong>Spins Left: <span id="spins"></span></strong></p>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="play-again" href="#">Restart</a>
@@ -42,29 +42,42 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="container col-lg-6" id="wheel-container">
+    <div class="container">
+      <div class="row">
+        <div class="container col-lg-5" id="wheel-container"></div>
+
+        <div class="container col-lg-4 disabled-div" id="button-container">
+          <div class="row" id="key-row1"></div>
+          <div class="row" id="key-row2"></div>
+          <div class="row" id="key-row3"></div>
+        </div>
+        <div class="container-fluid col-lg-3 disabled-div" id="vowel-container">
+          <div class="row" id="vowel-row"></div>
+        </div>
 
       </div>
+    </div>
 
-      <div class="container col-lg-6 disabled-div" id="button-container">
-        <div class="row" id="key-row1"></div>
-        <div class="row" id="key-row2"></div>
-        <div class="row" id="key-row3"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <button type="button" class="btn-primary btn-lg" name="button" style="display: none;" id="buy-a-vowel">Buy a Vowel</button>
+        </div>
+        <div class="col-lg-4">
+          <button type="button" class="btn-primary btn-lg" name="button" style="display: none;" id="solve">Solve</button>
+        </div>
+        <div class="col-lg-4">
+          <form class="form-inline" action="#" id="solve-form" style="display: none;">
+            <div class="form-group">
+              <label for="solve">Solve:</label>
+              <input type="text" class="form-control" id="solve-input">
+              <button type="submit" class="btn btn-default" id="solve-submit">Submit</button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
 
-    <form class="form-inline" action="#" id="solve-form" style="display: none;">
-      <div class="form-group">
-        <label for="solve">Solve:</label>
-        <input type="text" class="form-control" id="solve-input">
-        <button type="submit" class="btn btn-default" id="solve-submit">Submit</button>
-      </div>
-    </form>
-
-    <button type="button" class="btn-primary btn-lg" name="button" style="display: none;" id="buy-a-vowel">Buy a Vowel</button>
-    <button type="button" class="btn-primary btn-lg" name="button" style="display: none;" id="solve">Solve</button>
 
       <!-- Modal -->
     <div id="start-game" class="modal fade" role="dialog">
@@ -73,7 +86,6 @@
         <!-- Modal content-->
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
             <h4 class="modal-title">Welcome to Box of Fortune</h4>
           </div>
           <div class="modal-body">
@@ -96,8 +108,10 @@
         <!-- Modal content-->
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title">Game Over </h4>
-            <h4 class="modal-title" id="score-display">Score: </h4>
+            <div class="row">
+              <h4 class="modal-title col-6">Game Over </h4>
+              <h4 class="modal-title col-6" id="score-display">Score: </h4>
+            </div>
           </div>
           <div class="modal-body">
             <ol id="score-list">
